<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark"
    android:layoutDirection="ltr">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/you_are_rain"
        android:src="@drawable/baran_toe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/you_are_rain"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imgPause"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/pause"
            android:src="@drawable/pause" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/play"
            android:src="@drawable/next" />
    </LinearLayout>


</LinearLayout>